was added animation for product toggling

--- a/src/app/products/products-item/products-item.component.scss
+++ b/src/app/products/products-item/products-item.component.scss
@@ -9,11 +9,11 @@
 
     & .icon {
         flex: 0 0 #{$nav-height};
-        order: 0;
+        position: relative;
     }
 
     & h3 {
         flex: 0 0 calc(100% - #{$nav-height});
-        order: 1;
+        position: relative;
     }
 }
