--- a/src/app/products/add-new-products-item/add-new-products-item.component.html
+++ b/src/app/products/add-new-products-item/add-new-products-item.component.html
@@ -5,4 +5,4 @@
     (input)="onInput($event.target.value)"
     maxlength="27"
 >
-<span>Charecters left {{ 27 - name?.length }}</span>
+<h3>Charecters left {{ 27 - name?.length }}</h3>
