--- a/src/app/products/new-products-item/new-products-item.component.html
+++ b/src/app/products/new-products-item/new-products-item.component.html
@@ -1,3 +1,3 @@
-<span (click)='removeFromBuffer()'>x</span>
-<span>{{ newProduct?.name }}</span>
+<button (click)='removeFromBuffer()'></button>
+<h2>{{ newProduct?.name }}</h2>
 
