--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,16 +1,24 @@
 @import '../../shared/styles/_vars.scss';
 :host {
-    position: fixed;
-    width: 100vw;
+    @include nav-context();
     bottom: 0;
     left: 0;
-    padding: 0 calc(100%/2 - 640px);
-    height: #{$nav-height};
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
-    background: whitesmoke;
-    z-index: 10;
+}
+
+nav {
+    @include nav-layout('space-around');
+}
+
+button {
+    @include custom-button();
+}
+
+.btn{
+    &--in-basket{
+        @include imaginate-background('cart-icon-50px.png');
+    }
+    &--all{
+        @include imaginate-background('list-icon-inactive.png');
+    }
+    
 }
