--- a/src/app/products/products-item/products-item.component.html
+++ b/src/app/products/products-item/products-item.component.html
@@ -1,2 +1,7 @@
-<div class="icon" [@iconState]='getAnimationState()'>{{ product?.inBasket }}</div>
-<h3 [@nameState]='getAnimationState()'>{{ product?.name }}</h3>
+<div 
+    class="icon" 
+    [@iconState]='getAnimationState()'
+    [class.icon--basket]="product?.inBasket"
+    [class.icon--home]="!product?.inBasket"
+    ></div>
+<h2 [@nameState]='getAnimationState()'>{{ product?.name }}</h2>
