--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -3,7 +3,6 @@
     @include nav-context();
     top: 0;
     left: 0;
-
 }
 
 nav {
@@ -18,6 +17,26 @@ button {
     @include custom-button();
 }
 
-.btn--edit{
+.btn--edit {
     @include imaginate-background('edit-icon-active.png');
 }
+.btn--settings {
+    @include imaginate-background('settings-icon.png');
+}
+
+@include md() {
+   :host {
+    @include height($sm-size);
+  }
+  button {
+    @include height($sm-size);
+    @include width($sm-size);
+  }
+  .btn--edit,
+  .btn--settings
+   {
+    @include bg-size($sm-size);
+  }
+}
+
+
