--- a/src/app/products/products-item/products-item.component.scss
+++ b/src/app/products/products-item/products-item.component.scss
@@ -8,6 +8,7 @@
     align-items: center;
     border-top: 1px solid #d5d6d6;
     border-bottom: 1px solid #d5d6d6;
+    touch-action: 'pan-y' !important;
 }
 
 :host-context():first-child {
